# simrl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  autograd_8cpp.html  autograd_8hpp.html  autograd_8hpp_source.html  dir_2424da5da2ab545f1da96d58933f3e4d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  env__interface_8hpp.html  env__interface_8hpp_source.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html  model__interface_8hpp.html  model__interface_8hpp_source.html  navtreedata.js  navtreeindex0.js  simrl__cli_8cpp.html  simrl__cli_8cpp.js  tensor_8cpp.html  tensor_8hpp.html  tensor_8hpp_source.html  trainer__interface_8hpp.html  trainer__interface_8hpp_source.html
.github/workflows/: ci.yml  doxygen.yml
cmake/: dependencies.cmake
docker/: Dockerfile
docs/: README.md  architecture.md
docs/doxygen/html/: autograd_8cpp.html  autograd_8hpp.html  autograd_8hpp_source.html  dir_2424da5da2ab545f1da96d58933f3e4d.html  dir_2424da5da2ab545f1da96d58933f3e4d.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  env__interface_8hpp.html  env__interface_8hpp_source.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html  model__interface_8hpp.html  model__interface_8hpp_source.html  navtreedata.js  simrl__cli_8cpp.html  tensor_8cpp.html  tensor_8hpp.html  tensor_8hpp_source.html  trainer__interface_8hpp.html  trainer__interface_8hpp_source.html
docs/doxygen/html/search/: all_0.js  all_4.js  files_2.js  files_3.js
docs/doxygen/latex/: autograd_8cpp.tex  autograd_8hpp.tex  autograd_8hpp_source.tex  dir_2424da5da2ab545f1da96d58933f3e4d.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  env__interface_8hpp.tex  env__interface_8hpp_source.tex  files.tex  main_8cpp.tex  model__interface_8hpp.tex  model__interface_8hpp_source.tex  refman.tex  simrl__cli_8cpp.tex  tensor_8cpp.tex  tensor_8hpp.tex  tensor_8hpp_source.tex  trainer__interface_8hpp.tex  trainer__interface_8hpp_source.tex
examples/: mnist_mlp.cpp
include/simrl/: autograd.hpp  env_interface.hpp  model_interface.hpp  tensor.hpp  trainer_interface.hpp
include/simrl/utils/: logging.hpp
scripts/: build.sh  lint.sh  simrl_colab_guide.md  test.sh
search/: all_1.js  all_2.js  functions_0.js  searchdata.js
src/: autograd.cpp  main.cpp  simrl_cli.cpp  tensor.cpp
tests/: CMakeLists.txt  test_tensor.cpp  test_tensor_cuda.cu  test_tensor_utils.cpp  test_tensor_utils_cuda.cu
